[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "OpenEnv Data Cleaning RL Environment"
requires-python = "==3.11.*"

dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "openai>=1.30.0",
    "requests>=2.31.0",
    "openenv==0.1.13"   # ✅ FIXED VERSION
]

[project.scripts]
server = "server.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.27.0"
]

[tool.setuptools.packages.find]
where = ["."]